--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "log4js": "^2.5.3",
     "mongoose": "^5.0.10",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
